--- a/TranThanhSolution5/TranThanhSolution5/Views/Student/Index.cshtml
+++ b/TranThanhSolution5/TranThanhSolution5/Views/Student/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="panel-body">
         @if (Model != null && Model.Count() > 0)
         {
-        <table class="table table-dark">
+        <table class="table table-hover">
             <thead>
                 <tr>
                     <th>
@@ -31,33 +31,39 @@
                     <th>
                         @Html.DisplayNameFor(model => model.Birthday)
                     </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Age)
+                    </th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FirstName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Note)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Birthday)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Uuid }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Uuid })
-                        </td>
-                    </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Note)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Birthday)
+                    </td>
+                    <td>                        
+                        @Html.DisplayFor(modelItem => item.Age)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Uuid }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Uuid })
+                    </td>
+                </tr>
                 }
             </tbody>
 
